--- a/css/style.css
+++ b/css/style.css
@@ -99,6 +99,11 @@ h1, h2, h3, h4, h5, h6 {
 	margin-top: 30px;
 	float: left;
 }
+/*Imagens integrantes*/
+.thumbnail img{
+  width: 200px;
+  height: 200px;  
+}
 
 /*Media*/
 @media screen and (min-width: 320px) and (max-width: 520px) {
@@ -178,9 +183,10 @@ input{
 }
 
 .main-header {
-  background: url(../img/banner.jpeg) no-repeat;
+  background: url(../img/banner.png) no-repeat;
   background-size: cover;
   min-height: 610px;
+  margin-top: 4%;
 }
 
 .bg-color {
@@ -206,20 +212,21 @@ input{
 }
 
 .navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:focus, .navbar-default .navbar-nav>.active>a:hover {
-  color: #FFD34E;
+  color: #000;
   text-transform: uppercase;
-	background-color: transparent;
+  background-color: transparent;
+  font-weight: bold;
 }
 
 .navbar-default .navbar-nav>li>a {
-  color: #fff;
+  color: #000;
   padding: 10px 20px;
   text-transform: uppercase;
 	background-color: transparent;
 }
 
 .navbar-default .navbar-nav>li>a:hover, .navbar-default .navbar-nav>li>a:focus {
-  color: #FFD34E;
+  color: #FF4500;
 }
 
 .navbar-fixed-top {
@@ -229,14 +236,14 @@ input{
 
 @media (max-width: 768px) {
 	.navbar-collapse {
-		background: rgba(0, 0, 0, 0.8);
+		background: rgba(255, 211, 78, 0.8);
 		border-top: 0;
 	}
 }
 
 .top-nav-collapse {
-  background: rgba(0, 0, 0, 0.8);
-  padding: 15px 0;
+  background: rgba(255, 211, 78, 0.8);
+  padding: 10px 0;
 }
 
 .wrapper {
